force-app/main/default/objects/Purchase_Order_PDF__mdt/Purchase_Order_PDF__mdt.object-meta.xml
<CustomObject>
    <description
  >Fields are being assigned hard values ​​in Purchase Order PDF.</description>
    <label>Purchase Order PDF</label>
    <pluralLabel>Purchase Orders PDF</pluralLabel>
</CustomObject>