force-app/main/default/objects/Purchase_Order_PDF__mdt/fields/Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Address_Full__c</fullName>
    <label>Address Full</label>
    <length>255</length>
    <type>Text</type>
</CustomField>