force-app/main/default/objects/Purchase_Order_PDF__mdt/fields/Buyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Name__c</fullName>
    <label>Buyer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>